# group8-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aws/: ec2-user-data.sh
aws/terraform/: main.tf  user-data.sh  variables.tf
benchmarks/blocksworld/: domain.pddl  problem-3blocks.pddl  problem-4blocks.pddl  problem-sussman.pddl
benchmarks/gripper/: domain.pddl  problem-4balls.pddl
benchmarks/hanoi/: domain.pddl  problem-3disks.pddl  problem-4disks.pddl
benchmarks/logistics/: domain.pddl  problem-simple.pddl
benchmarks/tyreworld/: domain.pddl  problem-change-tyre.pddl
docs/: TECHNICAL_REPORT.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAuth.ts  usePlanner.ts  useProgress.ts  useProjects.ts
frontend/src/pages/: Documentation.tsx  LandingPage.tsx  Learn.tsx  LearnPage.tsx  Lesson.tsx  LoginPage.tsx  MainApp.tsx  NotFound.tsx  SignupPage.tsx  UserProfile.tsx
frontend/src/store/: index.ts
frontend/src/types/: planning.ts
nginx/: nginx.conf
scripts/: deploy.sh
src/: __init__.py  config.py  database.py  main.py
src/api/: __init__.py  models.py
src/api/routes/: auth.py  domains.py  planner.py  progress.py  projects.py  validation.py
src/grounding/: __init__.py  grounder.py
src/parser/: __init__.py  domain_parser.py  grammar.lark  problem_parser.py  simple_parser.py
src/representations/: __init__.py  action.py  domain.py  state.py  task.py
src/search/: __init__.py
src/validator/: __init__.py  plan_validator.py
(+34 files in other folders)
